gateway/overlays/azure-dev/gateway-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: talk-public-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-zitadel
      protocol: HTTPS
      port: 443
      hostname: zitadel.dev.telodev.com
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: zitadel-dev-tls
    - name: https-talk
      protocol: HTTPS
      port: 443
      hostname: talk.dev.telodev.com
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: talk-dev-tls
